old_tests/success/misc/import_export/main.sk
module ExportTest(foo) where

foo = 5

module Foo where

data A = A Int

module Main where

import Foo
import Std.Util
import ExportTest

checker :: A -> String
checker a =
    case a of
        A x -> "{}" % x

main = do
    a <- A foo
    assert ("5" == checker a)
