old_tests/fail/non_exhaustive_pattern_string/main.sk
module Main where

main = do
    a <- "alma"
    case a of
        "foo" -> ()
